# PengPort PSP 어댑터 workspace.
#
# - core      : generic 호스트 라이브러리 (PSP 서버 + ServiceState + source 드라이버)
# - minecraft : minecraft source 를 담은 flavor 바이너리 (core 위 thin)
#
# 새 서비스 타입 = core 위 새 flavor 바이너리(작은 source). 단순 서비스는
# generic flavor + config (Phase B). 설계: PengPort/docs/design/ADAPTER_MODEL.md.

[workspace]
resolver = "2"
members = ["core", "minecraft"]

[workspace.dependencies]
# PSP v1 schema lib — PengPort 본가에서 git dep
pengport-shared = { git = "https://github.com/LostCHoco/PengPort.git", rev = "bbcbdbffb5320f38877f87be5edd2ab72f3743cd" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
