[package]
name = "pengport-adapter-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "PengPort PSP 어댑터 generic 호스트 라이브러리 — PSP 서버(manifest/status/events) + ServiceState(online/present/metrics) + source 드라이버. 모든 flavor 가 embed."

[dependencies]
pengport-shared = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
axum = "0.8"
subtle = "2"
